# ChangeLog for dev-lang/swi-prolog
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.123 2007/10/26 19:47:59 keri Exp $

*swi-prolog-5.6.45 (26 Oct 2007)

  26 Oct 2007; keri <keri@gentoo.org> +swi-prolog-5.6.45.ebuild:
  Version bump.

*swi-prolog-5.6.44 (20 Oct 2007)

  20 Oct 2007; keri <keri@gentoo.org> +swi-prolog-5.6.44.ebuild:
  Version bump.

  16 Oct 2007; keri <keri@gentoo.org> swi-prolog-5.6.43.ebuild:
  Fix typo.

  16 Oct 2007; keri <keri@gentoo.org> swi-prolog-5.6.43.ebuild:
  Do not use unit-at-a-time on hardened installs as it segfaults on top-level
  variables in Prolog terms. Closes bug #194979.

  09 Oct 2007; keri <keri@gentoo.org> swi-prolog-5.6.43.ebuild:
  Fix install deps in xpce package. Closes #195161.

  08 Oct 2007; keri <keri@gentoo.org> swi-prolog-5.6.43.ebuild:
  Fix parallel install; closes bug #194981 reported by Jan Kundrát. Also call
  epatch on patch directory; suggested by Donnie Berkholz.

*swi-prolog-5.6.43 (06 Oct 2007)

  06 Oct 2007; keri <keri@gentoo.org> +swi-prolog-5.6.43.ebuild:
  Version bump.

  03 Oct 2007; keri <keri@gentoo.org> swi-prolog-5.6.41.ebuild:
  Parallelize src_install() and src_check() via emake. Thanks goes to Donnie
  Berkholz.

*swi-prolog-5.6.41 (02 Oct 2007)

  02 Oct 2007; keri <keri@gentoo.org> +swi-prolog-5.6.41.ebuild:
  Version bump.

  29 Sep 2007; keri <keri@gentoo.org> swi-prolog-5.6.39.ebuild,
  swi-prolog-5.6.40.ebuild:
  Clear seg-stacks on single-threaded engine. Reported by Giampier in bug
  #194121.

*swi-prolog-5.6.40 (27 Sep 2007)

  27 Sep 2007; keri <keri@gentoo.org> +swi-prolog-5.6.40.ebuild:
  Version bump.

  22 Sep 2007; Wulf C. Krueger <philantrop@gentoo.org>
  swi-prolog-5.6.37.ebuild:
  Marked stable on amd64 as per bug 189408.

*swi-prolog-5.6.39 (21 Sep 2007)

  21 Sep 2007; keri <keri@gentoo.org> +swi-prolog-5.6.39.ebuild:
  Version bump.
