@@ -6,6 +6,7 @@ DIST pl-5.6.41.tar.gz 11972093 RMD160 b04d42f473473de5c5b4bba3fb2eff773273bef9 S
 DIST pl-5.6.43.tar.gz 11989950 RMD160 e47f16fa529b9597bd2a5309671ec911cb3cf9f5 SHA1 fc0edf0778b276ff187cd3131ef0c42be915ba7f SHA256 bbaaed3b9b7c59a5a48fc34400a34e4600785d2b6964d7c988356ceac1479776
 DIST pl-5.6.44.tar.gz 11171998 RMD160 ec3db15a8fde33d5b901ac39d783a8e880e723d3 SHA1 1d00996ec36f50f1ca807b5fbb0a496767c36bed SHA256 af23bd7b353fa8ac8779e815975ae25b6ecb08f5b233b7c83c1494e8679a44f0
 DIST pl-5.6.45.tar.gz 11173151 RMD160 ba74f4157b3599fc297f48af6a54eefc0973d363 SHA1 9f055668428322c9478354d30f4a814aa81aa634 SHA256 c843e9eec4b32b54d266f4c82be18b0df04131217f5260aff10d22959c84b0ec
+DIST pl-5.6.46.tar.gz 11320105 RMD160 a0205d7c9552d624c409cc5265c5ab5c5cc8c49c SHA1 87e9d00a5b3305bebadddcb9bb54fadd78304dfd SHA256 ad2678cc1b98e1a794fda3cd5e0accd6d9971998a986c9103f2ebb867a908b8a
 DIST swi-prolog-5.6.37-gentoo-patchset-4.tar.gz 10585 RMD160 1d011dd4122b12075b08a21cee7ff593ec1e8ea2 SHA1 472eb7397f3799793c7cc387a3ad0265189a66cd SHA256 82441cc9b73def8540fff81e20290e124c88b9773b00519436339cf177acad72
 DIST swi-prolog-5.6.38-gentoo-patchset-3.tar.gz 9730 RMD160 b7ab6fe1ab4768f5b0d3e8ce920eac31df27a5a3 SHA1 2abcfb899f21df171429486bb3f6ce6bf3e1a7f9 SHA256 422e327a576b9927dfc0f09b586d78ca0d041786dcebe78d7316ef05b2ca4b6b
 DIST swi-prolog-5.6.39-gentoo-patchset-1.tar.gz 9330 RMD160 8a9a2ed838a6ff185016f8d9ad60237cebba6258 SHA1 b575ccbd5502f476116acd2288a05d714c88a9e4 SHA256 cc2c15b18ea2757d1e2b0a452447c349c0ca4dccb7c3d5692b7d8da3bfbef23f
@@ -14,6 +15,7 @@ DIST swi-prolog-5.6.41-gentoo-patchset-1.tar.gz 10532 RMD160 7ae2f587678b81cb940
 DIST swi-prolog-5.6.43-gentoo-patchset-2.tar.gz 10840 RMD160 a85acf8e4350ce211b1108a0bdbd708aca8b113e SHA1 900ba53e041af4e7cca67410d6d31d78208843e8 SHA256 808b51df4c86326edefd7d43190b3c02425dc12ff104515fc2323ab6ce6241dd
 DIST swi-prolog-5.6.44-gentoo-patchset-0.tar.gz 10479 RMD160 15511da2fe7630d2fec770ebf644d6285d1cabfd SHA1 a84e73a6d9e5cfb74ca79b69fe9cd40cfffde92e SHA256 fe8697a49468d0ec2d1d7041ca4be4c56847ec21df16e90f60ec9455fb8ef4ae
 DIST swi-prolog-5.6.45-gentoo-patchset-0.tar.gz 10548 RMD160 6184de904e08c00a33e71814aed986106ba2ca01 SHA1 fe9b1903d54f534bc609df9d60e172e807c6e170 SHA256 45176512359b19c299a134d07b6fdce7bff565dfc719b6e97d0bff49dea0832e
+DIST swi-prolog-5.6.46-gentoo-patchset-0.tar.gz 10510 RMD160 559531c4141ce5ed20d7cb73c190b87bb7363195 SHA1 9c013add889c5bc079c04593119eebc6f7454f79 SHA256 9de3284283c95169334706754f17d7af93ce8126b2b6bdc531b89b706e068e68
 EBUILD swi-prolog-5.6.37.ebuild 4247 RMD160 3e0feeae8a18c66d501ef4e1cec0c05f92322ae6 SHA1 a76749be8aa40496bdab5819cb6fa85a1fafb345 SHA256 af2a723506a370828b987c8d88aa85d2dff7928cc230a0cd1eab7576bd5bb97f
 MD5 20aa33c5a481f49538d5fb7f88eabdda swi-prolog-5.6.37.ebuild 4247
 RMD160 3e0feeae8a18c66d501ef4e1cec0c05f92322ae6 swi-prolog-5.6.37.ebuild 4247
@@ -46,10 +48,14 @@ EBUILD swi-prolog-5.6.45.ebuild 3177 RMD160 34b0140a27a14ab9da779d70d3e85e5cadb5
 MD5 c20c6021cf2b7f65828ff1ed4012328e swi-prolog-5.6.45.ebuild 3177
 RMD160 34b0140a27a14ab9da779d70d3e85e5cadb5c5d0 swi-prolog-5.6.45.ebuild 3177
 SHA256 bc255bca724a7ebb3e25d74fcdd28f704f7f9bf074031484d273ca5c3984bce3 swi-prolog-5.6.45.ebuild 3177
-MISC ChangeLog 22255 RMD160 776a9d2fa0c17c412b1800fcf9df8b2bfcf1e2f6 SHA1 a645d38d6791f02809c061fcb3adcbaa8d60c967 SHA256 9872f91f2954d40d451f96785b2ff183bd87fc01a2e2c95c245fad9abef6a01b
-MD5 00b2cc7bba2ced9685d99d9420a2a3aa ChangeLog 22255
-RMD160 776a9d2fa0c17c412b1800fcf9df8b2bfcf1e2f6 ChangeLog 22255
-SHA256 9872f91f2954d40d451f96785b2ff183bd87fc01a2e2c95c245fad9abef6a01b ChangeLog 22255
+EBUILD swi-prolog-5.6.46.ebuild 3177 RMD160 47f433e32c4cb0af170b0599eb866d178ba7efb8 SHA1 05db51a242e9974ecd17a92915964cab6772e39d SHA256 6bd45b22d59b6e84b93bd50e5e18c2c8b0cece78ebd7c061eb1c79a38bf3e104
+MD5 bcca04f3ca56483ff1c1f2b23bf68405 swi-prolog-5.6.46.ebuild 3177
+RMD160 47f433e32c4cb0af170b0599eb866d178ba7efb8 swi-prolog-5.6.46.ebuild 3177
+SHA256 6bd45b22d59b6e84b93bd50e5e18c2c8b0cece78ebd7c061eb1c79a38bf3e104 swi-prolog-5.6.46.ebuild 3177
+MISC ChangeLog 22371 RMD160 d1145adefdced5200fbdb2f1fdf8e2c5f0aab8ee SHA1 e98fc8db6941686839461a199d6436886d9c3350 SHA256 b495be61602aed662f5cdc603e78536661cfd9d69d3e45ad0f0f178efdb92899
+MD5 9bfe5211c84660329a5e657341adb18e ChangeLog 22371
+RMD160 d1145adefdced5200fbdb2f1fdf8e2c5f0aab8ee ChangeLog 22371
+SHA256 b495be61602aed662f5cdc603e78536661cfd9d69d3e45ad0f0f178efdb92899 ChangeLog 22371
 MISC metadata.xml 159 RMD160 38d27fd1c5faabedefa5507dfd83cb4c952fbc8c SHA1 52b92682cf41e53e71bf432537a16215bd9546b1 SHA256 851bf218a4283a1d8ea6ef98af0119a40eaa78bfaaec49c2f3440437f52889ba
 MD5 9187f53634e60ab7eb2ac7e98b0b19f7 metadata.xml 159
 RMD160 38d27fd1c5faabedefa5507dfd83cb4c952fbc8c metadata.xml 159
@@ -78,3 +84,6 @@ SHA256 3d3ac44799498384552e25adb43e4939a94a48672bdd7fadc5b56cc7173e4de5 files/di
 MD5 0ad81b4e9b827eb4ecba9ef2140ba109 files/digest-swi-prolog-5.6.45 539
 RMD160 fa3ff733923cdbb10357a7a798baf17deeb39015 files/digest-swi-prolog-5.6.45 539
 SHA256 64a888639e9f8f69cd38a2c045eb62476b5715f8b66be1c9835c21007b945d60 files/digest-swi-prolog-5.6.45 539
+MD5 a472ae7f0ddc5d43c28dc96913cd84a1 files/digest-swi-prolog-5.6.46 539
+RMD160 fdd76a4fcb7de4edea0369a285c9386447cebbf9 files/digest-swi-prolog-5.6.46 539
+SHA256 f0cc64d46f76715784cc28dfeae048e9754cac2a564d2c3da0cd57b05b69ee9a files/digest-swi-prolog-5.6.46 539
