@@ -1,0 +1,6 @@
+MD5 b61740083d84fdf0ebf732697033ae29 pl-5.6.46.tar.gz 11320105
+RMD160 a0205d7c9552d624c409cc5265c5ab5c5cc8c49c pl-5.6.46.tar.gz 11320105
+SHA256 ad2678cc1b98e1a794fda3cd5e0accd6d9971998a986c9103f2ebb867a908b8a pl-5.6.46.tar.gz 11320105
+MD5 454a982dd7628ea0c6e0bf2591eb1057 swi-prolog-5.6.46-gentoo-patchset-0.tar.gz 10510
+RMD160 559531c4141ce5ed20d7cb73c190b87bb7363195 swi-prolog-5.6.46-gentoo-patchset-0.tar.gz 10510
+SHA256 9de3284283c95169334706754f17d7af93ce8126b2b6bdc531b89b706e068e68 swi-prolog-5.6.46-gentoo-patchset-0.tar.gz 10510
