@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.123 2007/10/26 19:47:59 keri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.124 2007/11/09 18:09:01 keri Exp $
+
+*swi-prolog-5.6.46 (09 Nov 2007)
+
+  09 Nov 2007; keri <keri@gentoo.org> +swi-prolog-5.6.46.ebuild:
+  Version bump.
 
 *swi-prolog-5.6.45 (26 Oct 2007)
 
